# Dreamcatcher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt_arduino-esp32  README.md  build.sh  partitions.csv  partitions16.csv  sdkconfig  sdkconfig-esp32  sdkconfig-esp32s2  sdkconfig-esp32s3  sdkconfig.defaults
flashing/2021-archived/2021-02-10/: binaries.txt
main/: CMakeLists.txt  main.cpp  main_test.cpp
main/embedded/: app.css  app.js  bz2.js  captive.html  de.js  en.js  files_tree.html  fr.js  index.html  jsi18n.js  main.js  pot.js
main/embedded/simple_ui/: app.css  index.html
main/includes/: HopeDuino_CMT211xA.h  HopeDuino_TWI.h  UrlEncode.h  captdns.h  customize.h  lnb.h  lo.h  lr1110.h  lr11xx.h  settings.h  sx1280.h  wifi.h
main/includes/ft8/: ft8.h  ft8_constants.h  ft8_encode.h  ft8_message.h  ft8_text.h
main/lr1110_driver/: lr1110_hal.cpp  lr1110_hal.h  lr1110_hal_dariusz.cpp  lr1110_regmem.c  lr1110_system.c  lr1110_system.h
main/ondd/: carousel.h  decoder.h  fd.h  mpeg2.h  pointer.h  util.h  vandermonde.h
main/src/: HopeDuino_CMT211xA.cpp  HopeDuino_TWI.cpp  captdns.c  en50607protocol.cpp  lnb.cpp  lr1110.cpp  lr11xx.cpp  lr11xx_hal.cpp  sdcard.cpp  settings.cpp  sx1280.cpp  web_server.c  wifi.c  wifi.cpp
main/src/ft8/: ft8.cpp  ft8_constants.c  ft8_crc.c  ft8_encode.c  ft8_message.c  ft8_text.c
